# ChangeLog for dev-python/snakeoil
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/snakeoil/ChangeLog,v 1.58 2013/06/16 18:33:02 dolsen Exp $

  16 Jun 2013; Brian Dolbec <dolsen@gentoo.org> metadata.xml:
  Add myself as maintainer

  16 Jun 2013; Pacho Ramos <pacho@gentoo.org> -snakeoil-0.5.1.ebuild,
  metadata.xml:
  Cleanup due #122207

  18 Oct 2012; Brian Harring <ferringb@gentoo.org> snakeoil-9999.ebuild:
  Specify the versions of python snakeoil 9999 supports.

*snakeoil-0.5.2 (18 Oct 2012)

  18 Oct 2012; Brian Harring <ferringb@gentoo.org> -snakeoil-0.5.ebuild,
  +snakeoil-0.5.2.ebuild:
  Fix doc generation for py3k.

*snakeoil-0.5.1 (30 Sep 2012)

  30 Sep 2012; Brian Harring <ferringb@gentoo.org> -snakeoil-0.4.6.ebuild,
  +snakeoil-0.5.1.ebuild:
  Pull in 0.5.1; heavily faster whirlpool implementation, bug fixes.

  24 Sep 2012; Patrick Lauer <patrick@gentoo.org> snakeoil-0.5.ebuild:
  Adding mips keyword

  05 Aug 2012; Brian Harring <ferringb@gentoo.org> snakeoil-0.5.ebuild:
  Update the python dep to >=2.5 && not 3.0

*snakeoil-0.5 (05 Aug 2012)

  05 Aug 2012; Brian Harring <ferringb@gentoo.org> -snakeoil-0.4.5.ebuild,
  +snakeoil-0.5.ebuild:
  New version including whirlpool/sha512 support, parallelization of
  compression,
  and generally a boatload of functionality that should've been released
  earlier.

*snakeoil-0.4.6 (14 Dec 2011)

  14 Dec 2011; Brian Harring <ferringb@gentoo.org> -snakeoil-0.4.4-r1.ebuild,
  -files/snakeoil-0.4.4-atexit-weakref.patch, +snakeoil-0.4.6.ebuild:
  Pull in 0.4.6; punt old version in the process

*snakeoil-0.4.5 (30 Nov 2011)

  30 Nov 2011; Brian Harring <ferringb@gentoo.org> -snakeoil-0.4.3.ebuild,
  -snakeoil-0.4.4.ebuild, +snakeoil-0.4.5.ebuild:
  Bugfix release, wipe older versions in the process

*snakeoil-0.4.4-r1 (11 Nov 2011)

  11 Nov 2011; Brian Harring <ferringb@gentoo.org> +snakeoil-0.4.4-r1.ebuild,