@@ -4,18 +4,16 @@ Hash: SHA256
 DIST snakeoil-0.5.2.tar.bz2 151814 SHA256 ede87f5dcfc29c6b5ec0ead3e07533b0ed1b3779c79e5d37e542d193a947b5e9 SHA512 c071af6a17912ca64edb8e760c1d5f31a47a206054ff3120562785764c18d9d7045f13447db3c7ba8b33f053941f8dd8d2640733e4e6f85afbac020a65632121 WHIRLPOOL 8d03669e6dc4a2422f87a71e20ec81343a3df0f3a399f712ae6b5a0599ff3caf34986eb7db1c0d2d42818e74710b5aa2f31447db89a8f5e9ed6b04548dd73fb1
 EBUILD snakeoil-0.5.2.ebuild 1487 SHA256 c3a4412cef1e09831fdd59cb69b7481d8d13195103f86c21ec828da1ad1f5086 SHA512 7fde923d2afdb6446ce6b3f0cca4364aa82e94654ff8aec25e680c8bd2c1dc5640db317d9e361bf6cad0320fac1d7509aa4c3d3657d5bb07a5233bdfd1717cc8 WHIRLPOOL 9cd74cd4dfe2c0446dbcf46a5d7fef84162253bda5a5938e29c07136203189542112c7516c8d1e28efa63909cddcc14fa5a43598fd524c2c3e9e9d7fe8400c86
 EBUILD snakeoil-9999.ebuild 1438 SHA256 6906d4b5dc81c06c4509854934cdf44a1cda54e86837fe03f1e4df5b704b0835 SHA512 4650e89999f46ddc2312ae2e78e23b6803745aa59ff10bb158713900a597fb0fd1686d49d89771bc646c8c53dc68c932d53a525fd40080cbdce1d2a5a6756ca4 WHIRLPOOL a07c9029ba784a1ef98314677003f813a3fabec8fde998bba76cc15962f56d694de246f4b8c423533e016ce109403c6ba0c8d648f3a7373395c434f962e97581
-MISC ChangeLog 9571 SHA256 30191c9f021e70e5f65898052c920dbc680433b11e8f207947c2fdefe17aa866 SHA512 794d162662748be9bdf124d5b3faea5314fde57ab447d67d61774ce1d6e9f17064a08c9efac87cd073c58d741f00482311bebdbbef14fa0a29aec7d017806cd2 WHIRLPOOL e8866cbbee37fe4097022e6e1947f12aca0c033fee0fc07f816e2c0319108eaa058d8967be4deb288b3935537f0c5320f63c59ef33d81d460e948b8007b3659a
-MISC metadata.xml 309 SHA256 769d897a81f1ed560151f7a4a5581d4fd85cad46dbcb6e6627170f5bcc5e08b8 SHA512 10069a8b716009cf25f4d1e208ece0c9fae4ecad8b2160533053e01e389fdc8041f8d274301aa9a10e8228093f7f9c6266bd2a3925bc0bc39800d19fe9005c65 WHIRLPOOL 2090134e04eee4605a629dd2c49d27388277166118b631b9a8fa1811ad63e5def539b3e7da9633e9f055a1f705a666f759e434c50de28dc695386991b72bdb30
+MISC ChangeLog 9668 SHA256 5de24db6f963246869578bc6fc118c9e71af0b434d125947cfbf51814b12f03c SHA512 d6b5ea9188868c784d29de22c2812861e67c1ca232997f5b5255bf315d168d534534a51d05fb868e8e747e4f2b640dc17f2d6a7b87027718274b781a9ee84f2d WHIRLPOOL 462fd1d9bfe19046d43e2522289d4a8e11219bb623f48b582b7d4e077030ab93c2a4f2b4adbc1a97df8178ffbcb598296aac951ab5175e574958949d7e238de4
+MISC metadata.xml 402 SHA256 cd3cf5ec7c3fea385f3babab51cb7188fc818295490cf307492ccf23eb8d7bae SHA512 05269a9377d239ed364f388a7e76f5128841e6a74c82b5643e01c0d465bb389e933a00199cc1e91c497e927226917e1a2f54378233b65bd650448eb9e96a5542 WHIRLPOOL 99f467af29066178c13b6626a1f95e264a2eca4a07fd07b0142b24fdf943271702562c32cceeef2d78f4530602f0e23ab5e6d2801ea4d08f2f95509a108ebfeb
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iQF8BAEBCABmBQJRvgTQXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ4Njg4RkQxQ0M3MUMxQzA0RUFFQTQyMzcy
-MjE0RDkwQTAxNEYxN0NCAAoJECIU2QoBTxfL8m0IAMXc7l+vfSRSOiv9ygk0r7HQ
-arCltD2oqvPkfkMs9ECdoHLI2wPjrzeEsIRbdAgRI/88ZlILgJ1yqvC1Z4DWuNIg
-4bdXPs/vpnewXM8sAik7IBRTp4K1xIkol5Moa4xiXaTfkT6FiaawkH77PRrntiFS
-QN6K6YIxgIxiqrxgjcGTIP/b9MLGWQgYVVgCwtCUZyaZIAiwHHI2YujXhdEcgXQ+
-Jgm+B2695y54ETQdg4IzmIFJqCQ1bY3Y4VUeng5Uf+TrIFaeacB8+sNBk4isrD3d
-6NNNFfDUt7AVkzYZl29ahJbUYoI2x/xK3OfQcBEW3MwMacT9Mq9PdnecW03Pjec=
-=UP8f
+iQEcBAEBCAAGBQJRv1k+AAoJEEqz6FtPBkyjA0YH/3QfghOUu1JBYnwX6WG3H4eH
+CJlD1SWYZ4Yz1JQskn8lpJ9UWTw0MJ99QZvCQqfYjz6tFohzRMl9LVcgZuMEnTE8
+IaWoJQcId0GJv8AI8bkNdr42hMskwovczgtin7mIQx7LYjtcwMM1tqCwTd8lTlxm
+1Kw6svdBGGI+pyXrBTQgxCPvJZv7xs84vWBXE3FdUl+ttar0LVD+N6tmVkWbYG8m
+FCB0R+23R6M62NzIV6HWAJm/M859go6NNpsMip63utOLRsOooG7jO4aZjOqRORq+
+4hSKFTG9zGbTL7qbyF7vo5CrnzjU74wlFbh0uLK/mNaES13c0taiBuFIbPSn6Qg=
+=IM6m
 -----END PGP SIGNATURE-----
