@@ -5,6 +5,10 @@
 		<email>dolsen@gentoo.org</email>
 		<name>Brian Dolbec</name>
 	</maintainer>
+	<maintainer>
+		<email>radhermit@gentoo.org</email>
+		<name>Tim Harder</name>
+	</maintainer>
 	<upstream>
 		<remote-id type="google-code">snakeoil</remote-id>
 	</upstream>
