@@ -1,7 +1,21 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST pkgcore-checks-0.4.14.tar.bz2 45044 SHA256 1c334da8614d505516d7cbf2f02041bfcebac8f9652a4163577d6f44308f081f SHA512 d7b6f638797f645bcd9368c6904f750c6c117b43d61935caf0488d1f6620d8c2a62f927efc81df9f0f782ee07d1a021022cbab8592ed4c5c041b2cc2d48c9e64 WHIRLPOOL b83a0f036fdfa1386ba17e283ad819f95cbf6bd61eeff622d24a04c700f4ef471b2e2a774f34937d08a9551d997bc4560ca41b4729247741fc4b06c6609c8d6b
 DIST pkgcore-checks-0.4.15.tar.bz2 45322 SHA256 668bf6539f53c5d09b16e2cc4fdcbfe5dc7757f45d2b2a016706de998ce0109e SHA512 842a63866c99e346e5e51ae454fc2766c2efce96298f7c49a6399f539b3af5731745e84e1070a6016bcb5ba5f0c4d76d0b4a09de00d10133f61fdcd8756cf697 WHIRLPOOL 5d184bd611d1add40a6194ac2503556ce85867b83e5a66b9f8266d830dda19aee0cdaa25a74556bd8e87260c879984b692cb6c75378f141f12530ca75f39b9b8
 EBUILD pkgcore-checks-0.4.14.ebuild 1219 SHA256 c34efcfa2b7829855f8d1d1586b4fe26383029aa6e3302255fddd58d343d160d SHA512 57e7e009a3737334860d161e838e09c667aa35af1c173b91da4c32740631cadab9d2ade4bf3b8e5cdc548ab6ff9c98d2c3991449ae04dbc17401732571bec715 WHIRLPOOL 5400da488202065e51c762436a95d7a80300f5a41c53c13653c98252ed4ffc62f5437d623627103d13c3c1d3ce752a3d39b0f342fda06d78d78c0e55adfeed67
 EBUILD pkgcore-checks-0.4.15.ebuild 1219 SHA256 1f2498139a959ad3d8c81cc79aeb1f2aebd8fcc9370c23c2f6d01804e226ade4 SHA512 82945dd81833b714f641f164ab4188f371b05e5e14cc575f60b490a10419bd464540bec37381d615512b20293bc4a27796143efb4d98e6ec1e204aebe630a8c3 WHIRLPOOL 39339ff46dd59e0172f80d999960f6b1b1deba86c158e62ad99f7bd25dc5b448636e373c167f8c42e75192c3d2c4432d893ecac828f05031db9f50709c873acf
 EBUILD pkgcore-checks-9999.ebuild 1170 SHA256 c57730db3f488336da2cd090185aafec639e337c645381999d75aa472c310bfe SHA512 35f984016b4c249791ecd54af58d38324bcda681b382261d4be34e7135aeeb627b9780bf579a8f06033fba3f4fd43bd9c1379b0513a02a370e8c617b1676dac7 WHIRLPOOL 6e83ec4f4ee91b71674479463a33e03ee6b45f4159f14e8faa3817c092bfe095e2b54fb06f3ec6a6db535396866c9e8dc7cfe72f6da3b27f29ad4a4c02fa306b
-MISC ChangeLog 8036 SHA256 40a503e7b682e40864ade0b129e51e86bc17048be6ff51655d61d88f5562583b SHA512 4cc86482376fc9d77427a7aa989a00e5ea77b1c1efe536021a51ba50ac7061e211857ab5a62ccd82798a02d26cd60a5f435b125c3d02b44cd5de5b6589b2950e WHIRLPOOL a5b72ccd2b92571c27efb66481a349276713e63128e61e72fd3a222b448cd8bfc66dc869b5aa6744be4518bb88b4430fbb2a11ce8a8b6e6bcf228860e881bd2c
-MISC metadata.xml 244 SHA256 caec3ad59ec4895b367b9311485a091845973251f509946c48bfa0f7c81a4fab SHA512 843142d6cc52cc0100763b747c066cd4c3e571d69405fbe5bded0c54a6bc9562b2efa6ee88734324df53d10d676840b4b59ab5bdc6b4dfab4c4e877352926866 WHIRLPOOL 8ab02cb2dd8082c71ed36c0a1fd44d5f9b6802b3dc2bec6a971c504d2498591cd11c77e58c21c5626b230ca6a9d6977743312c1ac3e4962e43a649a471c45370
+MISC ChangeLog 8131 SHA256 6d85569338821b17f8247987aa83abbc4c96df2d0e1690ff7323f19827b49e44 SHA512 0f142894435f51e57808f3cec125cc03c00822d55eb08fbe0e6ddee400a7e120506a349c1f0c8fac2642225cac0e7485818c5f693c6e2c73e047af3f116eed51 WHIRLPOOL bd7a1b925d8e99d64d42ba7f4e7d051c9ee1ee19002539cfd8e09fd79c4d2230bca23ba04c5692b52c3d80f1237855be91035201002949fb7d65a3df777242ea
+MISC metadata.xml 337 SHA256 8c7ee96c7d07ade798820abf8c8d71bd87277c4385d9fae943ffc868579286e6 SHA512 4b3d95339f50039aa772a008710c9ae65ddf2bc46d0154bb0a773136d4108f6128abd50806d253f36a2be20e5981f5f549bef2b9155fde943db34d487ec16efc WHIRLPOOL 42a72515e8cc7d7aa79bcaf6b9b3aa89f1284a246054d816b02c45a37343ce1e67ab9e2c11c3ef47c1f60fbb8440ca585db2557a423f5b2712ff3c722616e0ad
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.20 (GNU/Linux)
+
+iQEcBAEBCAAGBQJRv1nAAAoJEEqz6FtPBkyjiZEIALYcZMlaoJJvcxiptCFBRdd6
+WF8mp5IXSPcPkM2gJmlv8UPmqwWB9bL4rfyOKsL2lE9vh+6pzju0Y3w2REsrC9XP
+oPq3mDxutkinYR9pjvvxMzer0dIYrFJZPlrgTOgbmxft7bT/INqz18KvG4cfZTzB
+OA2UfRUHLQtf94jl68tm+pfo5v7YGag16qOkQNoeIP8cZMH/4v22xIWdMkBAfoiX
+6E2KWDlLF7ohsW4DbeNzi4Stl8+6QhNsFPcncE6ZMKKE7vOD2HXic0qXKzcByujo
+YTudb4KiJGXL3WIAsrgdV+GOnaf7AdPGAP7fWfDePn91leJ5PReR+1Ix4hQsurY=
+=Tjo0
+-----END PGP SIGNATURE-----
