@@ -4,18 +4,16 @@ Hash: SHA256
 DIST pkgcore-0.8.6.tar.bz2 446652 SHA256 05104f683bcad4fb477152c950d8ba21d8a59fe783f05e901f684c66f2c9488c SHA512 320562755c21cb1d749ea011d22313f8c09855375ea72c94910f45202d8a92bb75a0fa709a360c702c16e404dbec9d14d5ed3aff6687084418dc742a4c901955 WHIRLPOOL 611ad52a8015379de50593580c35eb1f175fd0fe3c219548911e7008c58a52185128840950d17c3fd730659196db79550762f029c8c0c199eaba8aa07a8bf9d9
 EBUILD pkgcore-0.8.6.ebuild 1035 SHA256 d61ae1437f5b827a65a93dba0b703ab1c8fbbf16880aedea6e00823d8a6a7cad SHA512 edcbe953b8dd34d1202a396e66fb5ebbb7640c07523766b9687a1ad4d2cad40ba3814c8ff44b0b33d1edbb218f58b1aae6ff08ae5d9393fcc39f8ef3b7f534bb WHIRLPOOL 202044901ad324e97b974193ac10eb95d36e2641e54b8965f6cc73ba4edd3ba7f88ac8f5a14c848bdcb7f589e3d3b1c9e6c48d4424329a52e90b1c664596ac8f
 EBUILD pkgcore-9999.ebuild 1146 SHA256 87c8ca7f261496ab0b82758c8389a3aae4335ad0f710eafcb72c19fec067c26f SHA512 c3b558b49a47fd717372a63c27c6c4ba26a7768f459683e2072132d95e86a5c4444b0f44087ef3a68d762b45e2bac2c96338589bca2225eb46e39d91fe46eac4 WHIRLPOOL 37b039266e91474b12480f037fbd0a005dc47235bdd985b4ed5cf0797419be0881417481b3ba27832e7e3bf6aa182606c0c944e4bb4ab6447fcedba048182cc6
-MISC ChangeLog 28953 SHA256 8b58dcf42829da143321549124cdf54236d760e2ed69acb332d948f934b7a311 SHA512 4cb5c98b5c91ad97320489ed92ef7b98e15ca78d2b8b43c9b0753fb879ab125ccaa5df337d877e859f694d78fa4d953b4a20e5b10b291715802814aedb61d2f3 WHIRLPOOL 8826ca166d39fd78a5776ab66a3b977c243f06b8259d23a7fb9c7e80f5533390560ab5c5701f2da532dc0f697df138e9553b24f1ec708e9e2c40b76f87d5d6a7
-MISC metadata.xml 300 SHA256 4e8331961630a795ef27f1a403f8034e67b875953bdd209af51739a406972ce1 SHA512 6e9931bbbbc9a67eee11f98898ed22c0032be76fcfad975c9278b75e46508b87c4870ff8b02e10d80524a9cb462d0ee1b9106a5c5742a3f3c933230a38be7d07 WHIRLPOOL 7cf5600b1d7afb47a20680ac2e483c2a90c2f5db9687e636ba348eab9e09b7a67599bfd26a0af757029a9b72f0cc0d40cf90169e9e69e401f06e30c3c43c42da
+MISC ChangeLog 29050 SHA256 7582c0ce1dddbd959f7641bc00b79518fb8d1db0839d4e5b374aa80a1e42acf2 SHA512 3ed42819f76a9c1dc01aea04bd6871b961ac573bd3aae76c03a34126a3c7f169ef3df836d8f39b804e5e5ac89ab1dfe669474879febf0cd9b9dc02ca19a95d53 WHIRLPOOL ebab1b1e0d01193c6ae83214856a8e3bece89aa9243a7940c155e9787156212b8156abd894707f2931963aa02585f12da0fccceb56312c3a349534ddcac7d558
+MISC metadata.xml 393 SHA256 69e5553d453dc5a012f338fc7dc63104276c39f9ddfc53c2eee332fecbc1b8a8 SHA512 cce86dcd80973a363dd3613ba35ce1e68445c07313516a481e34a76896d5c261160236a8818fea5b995dda39e7d7358af833b43c38b3a2ef91e044257ea7e00d WHIRLPOOL 33b0d6aaa0497bf9d66f4284142a62621bdfbaa17de90fffbcb29197427625b617c2fdc7cf5977fcb622ae08da13eb72cf953d0f8a36d10b2d9d61814ee02263
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iQF8BAEBCABmBQJRvgVxXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ4Njg4RkQxQ0M3MUMxQzA0RUFFQTQyMzcy
-MjE0RDkwQTAxNEYxN0NCAAoJECIU2QoBTxfLDaAIAJ7BMMV4F5CDRasnG2m6Vc0u
-KC7xLwnpm8Y2DsglUKdFkHPSnH4AXmORuFnfNULKH7xKFHONm3G1EqVotlAtGjlB
-IQFhm9R+FCxw3ATl4iMLnkHEoFUj7t9OnvSZLChvC2qdO5vkfClfHD8fUMMXQgK4
-7pVC/7JK7maAH573tXTth+DSXHVWMIp8tn+Yw6LbeDqOqxrUjycCxvjKMIQuowN7
-zJB2yWFhdG+6OOJGKGXt84qJp/62WgYodmcsVoS+DDGLDTtVmI94BWDIN0KTFTlj
-dEhBLoMJdisQEqbm0uIgf6A3tfC25l38uMz4hLv8fdW0xNSt32JZWkfkMVgBcrk=
-=KOKU
+iQEcBAEBCAAGBQJRv1oOAAoJEEqz6FtPBkyjHx8H/0hBSmeI3wToAUrmuQaCZagI
+FZ/x5apqwu2/0KA/GbAHU72z6lVPcmxnS4lkZRtK5ej1iiC3VpfdYIR9U5nN0jqO
+uNQMJmYp7Y9hxmnJYsp1mZ7175OLKCRJQ6TRjtFEycKrDngbw2NBnVn47sUEq8to
+R/E5aP4n+ZdTKUXMjgUtcKauK/9FbTCueOI++OPTFkmIsUgYGFPookOuIGhowXJ9
+q8mLe3rbRv8d3u6U3HBHqUxTp/545UF/uFHlh48dLNhzsQB6khwvvahVXqBItcXu
+yWPYAu3Rt4M0BbuNJcxeIDY8VXECIbgdoz9JhYq77tfu37Svl9ofbh2wjY1ayic=
+=oSoi
 -----END PGP SIGNATURE-----
