@@ -1,6 +1,9 @@
 # ChangeLog for sys-apps/pkgcore
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/pkgcore/ChangeLog,v 1.168 2013/06/16 18:35:43 dolsen Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/pkgcore/ChangeLog,v 1.169 2013/06/17 18:48:45 radhermit Exp $
+
+  17 Jun 2013; Tim Harder <radhermit@gentoo.org> metadata.xml:
+  Add myself as a maintainer.
 
   16 Jun 2013; Brian Dolbec <dolsen@gentoo.org> metadata.xml:
   Adding myself as maintainer
